<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdaugareActivitatiActivity">

    <CheckBox
        android:id="@+id/chkbx_add_activitati_preferinta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkbx_add_persoane_salveaza_preferinte"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add_activitati_salvare"/>

    <Button
        android:id="@+id/btn_add_activitati_salvare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_persoane_salvare"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chkbx_add_activitati_preferinta"/>

    <TextView
        android:id="@+id/tv_add_activitati_info_activitate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_add_activitati_informatii_activitate"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_activitati_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_activitati_info_activitate"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_add_activitati_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_add_activitati_tip_activitate"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:id="@+id/tv_add_activitati_durata_activitate"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:text="@string/tv_add_activitati_durata_activitate"
       android:textStyle="italic"
       android:textSize="20sp"
       app:layout_constraintHorizontal_bias="0.01"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/til_add_activitati_tip"
       />

    <TextView
        android:id="@+id/tv_add_activitati_durata_ore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_add_activitati_durata_ore"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_add_activitati_durata_ore"
        app:layout_constraintTop_toBottomOf="@id/tv_add_activitati_durata_activitate"
        />

    <TextView
        android:id="@+id/tv_add_activitati_durata_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_add_activitati_minute"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_add_activitati_durata_minute"
        app:layout_constraintTop_toBottomOf="@id/tv_add_activitati_durata_ore"
        />

    <EditText
        android:id="@+id/et_add_activitati_durata_ore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:inputType="number"
        tools:ignore="Autofill"
        android:hint="@string/et_add_activitati_durata_ore"
        app:layout_constraintStart_toEndOf="@id/tv_add_activitati_durata_ore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_activitati_durata_activitate"
        />

    <EditText
        android:id="@+id/et_add_activitati_durata_minute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:inputType="number"
        tools:ignore="Autofill"
        android:hint="@string/et_add_activitati_durata_minute"
        app:layout_constraintStart_toEndOf="@id/tv_add_activitati_durata_minute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_activitati_durata_ore"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_activitati_calorii_arse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_add_activitati_durata_minute"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_add_activitati_calorii_arse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_add_activitati_calorii_arse"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>